cabal-version:       2.2

Name:                freetype2
Version:             0.3.0
Synopsis:            Raw Haskell bindings for FreeType 2 library
Description:         Please check the README for information on how these
                     bindings operate.
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Jason Dagit, Oleksii Divak
Maintainer:          Oleksii Divak <frozenwitness@gmail.com>
Copyright:           Copyright © 2011-2012 Jason Dagit
                     Copyright © 2020-2022 Oleksii Divak
Category:            Graphics
Build-type:          Simple
Extra-source-files:  freetype2/include/*.h
                     freetype2/include/freetype/*.h
                     freetype2/include/freetype/config/*.h
                     freetype2/include/freetype/internal/*.h
                     freetype2/include/freetype/internal/services/*.h
                     freetype2/src/autofit/*.c
                     freetype2/src/autofit/*.h
                     freetype2/src/base/*.c
                     freetype2/src/base/*.h
                     freetype2/src/bdf/*.c
                     freetype2/src/bdf/*.h
                     freetype2/src/cache/*.c
                     freetype2/src/cache/*.h
                     freetype2/src/cff/*.c
                     freetype2/src/cff/*.h
                     freetype2/src/cid/*.c
                     freetype2/src/cid/*.h
                     freetype2/src/gxvalid/*.c
                     freetype2/src/gxvalid/*.h
                     freetype2/src/gzip/*.c
                     freetype2/src/gzip/*.h
                     freetype2/src/lzw/*.c
                     freetype2/src/lzw/*.h
                     freetype2/src/otvalid/*.c
                     freetype2/src/otvalid/*.h
                     freetype2/src/pcf/*.c
                     freetype2/src/pcf/*.h
                     freetype2/src/pfr/*.c
                     freetype2/src/pfr/*.h
                     freetype2/src/psaux/*.c
                     freetype2/src/psaux/*.h
                     freetype2/src/pshinter/*.c
                     freetype2/src/pshinter/*.h
                     freetype2/src/psnames/*.c
                     freetype2/src/psnames/*.h
                     freetype2/src/raster/*.c
                     freetype2/src/raster/*.h
                     freetype2/src/sdf/*.c
                     freetype2/src/sdf/*.h
                     freetype2/src/sfnt/*.c
                     freetype2/src/sfnt/*.h
                     freetype2/src/smooth/*.c
                     freetype2/src/smooth/*.h
                     freetype2/src/svg/*.c
                     freetype2/src/svg/*.h
                     freetype2/src/truetype/*.c
                     freetype2/src/truetype/*.h
                     freetype2/src/type1/*.c
                     freetype2/src/type1/*.h
                     freetype2/src/type42/*.c
                     freetype2/src/type42/*.h
                     freetype2/src/winfonts/*.c
                     freetype2/src/winfonts/*.h

                     cbits/src/*.c
                     cbits/include/extra/*.h

Library
  Exposed-modules: FreeType

                   FreeType.Core.Version
                   FreeType.Core.Types
                   FreeType.Core.Base
                   FreeType.Core.Unicode
                   FreeType.Core.Color
                   FreeType.Core.Layer
                   FreeType.Core.Glyph
                   FreeType.Core.Mac
                   FreeType.Core.Size
                   FreeType.Format.Multiple
                   FreeType.Format.TrueType
                   FreeType.Format.Type1
                   FreeType.Format.SFNT
                   FreeType.Format.BDF
                   FreeType.Format.CID
                   FreeType.Format.PFR
                   FreeType.Format.WinFNT
                   FreeType.Format.Font
                   FreeType.Format.Gasp
                   FreeType.Control.Driver
                   FreeType.Control.Parameter
                   FreeType.Control.Subpixel
                   FreeType.Cache
                   FreeType.Support.Computations
                   FreeType.Support.List
                   FreeType.Support.Bitmap
                   FreeType.Support.Outline
                   FreeType.Support.Scanline
                   FreeType.Support.Advance
                   FreeType.Support.Glyph
                   FreeType.Support.System
                   FreeType.Support.Module
                   FreeType.Support.GZIP
                   FreeType.Support.LZW
                   FreeType.Support.BZIP2
                   FreeType.Error.Enumerations
                   FreeType.Error.Values
                   FreeType.Miscellaneous.OpenType
                   FreeType.Miscellaneous.Incremental
                   FreeType.Miscellaneous.TrueType
                   FreeType.Miscellaneous.TrueTypeGX

  Reexported-modules: Foreign.Storable.Offset

  Other-modules: FreeType.Circular.Types

                 FreeType.Core.Types.Types
                 FreeType.Core.Base.Types
                 FreeType.Core.Color.Types
                 FreeType.Core.Glyph.Types
                 FreeType.Core.Layer.Types
                 FreeType.Core.Mac.Types
                 FreeType.Format.BDF.Types
                 FreeType.Format.Multiple.Types
                 FreeType.Format.SFNT.Types
                 FreeType.Format.TrueType.Types
                 FreeType.Format.Type1.Types
                 FreeType.Format.WinFNT.Types
                 FreeType.Control.Driver.Types
                 FreeType.Control.Subpixel.Types
                 FreeType.Cache.Types
                 FreeType.Support.Computations.Types
                 FreeType.Support.Glyph.Types
                 FreeType.Support.List.Types
                 FreeType.Support.Module.Types
                 FreeType.Support.Outline.Types
                 FreeType.Support.Scanline.Types
                 FreeType.Miscellaneous.Incremental.Types
                 FreeType.Miscellaneous.TrueType.Types

  hs-source-dirs: src

  Build-depends: base >= 4.10 && < 5
               , storable-offset

  Build-tool-depends: hsc2hs:hsc2hs
  ghc-options: -Wall

  include-dirs: freetype2/include
                freetype2/include/freetype
                freetype2/include/freetype/config
                freetype2/src/autofit
                freetype2/src/base
                freetype2/src/bdf
                freetype2/src/cff
                freetype2/src/cid
                freetype2/src/cache
                freetype2/src/gzip
                freetype2/src/lzw
                freetype2/src/pcf
                freetype2/src/pfr
                freetype2/src/psaux
                freetype2/src/pshinter
                freetype2/src/psnames
                freetype2/src/raster
                freetype2/src/sdf
                freetype2/src/sfnt
                freetype2/src/smooth
                freetype2/src/svg
                freetype2/src/truetype
                freetype2/src/type1
                freetype2/src/type42
                freetype2/src/winfonts

                cbits/include
                cbits/src

  c-sources: freetype2/src/autofit/autofit.c
             freetype2/src/base/ftbase.c
             freetype2/src/base/ftbbox.c
             freetype2/src/base/ftbdf.c
             freetype2/src/base/ftbitmap.c
             freetype2/src/base/ftcid.c
             freetype2/src/base/ftfstype.c
             freetype2/src/base/ftdebug.c
             freetype2/src/base/ftgasp.c
             freetype2/src/base/ftglyph.c
             freetype2/src/base/ftgxval.c
             freetype2/src/base/ftinit.c
             freetype2/src/base/ftmac.c
             freetype2/src/base/ftmm.c
             freetype2/src/base/ftotval.c
             freetype2/src/base/ftpatent.c
             freetype2/src/base/ftpfr.c
             freetype2/src/base/ftstroke.c
             freetype2/src/base/ftsynth.c
             freetype2/src/base/ftsystem.c
             freetype2/src/base/fttype1.c
             freetype2/src/base/ftwinfnt.c
             freetype2/src/bdf/bdf.c
             freetype2/src/bzip2/ftbzip2.c
             freetype2/src/cache/ftcache.c
             freetype2/src/cff/cff.c
             freetype2/src/cid/type1cid.c
             freetype2/src/gzip/ftgzip.c
             freetype2/src/lzw/ftlzw.c
             freetype2/src/pcf/pcf.c
             freetype2/src/pfr/pfr.c
             freetype2/src/psaux/psaux.c
             freetype2/src/pshinter/pshinter.c
             freetype2/src/psnames/psmodule.c
             freetype2/src/raster/raster.c
             freetype2/src/sdf/sdf.c
             freetype2/src/sfnt/sfnt.c
             freetype2/src/smooth/smooth.c
             freetype2/src/svg/svg.c
             freetype2/src/truetype/truetype.c
             freetype2/src/type1/type1.c
             freetype2/src/type42/type42.c
             freetype2/src/winfonts/winfnt.c

             cbits/src/ftbitmap.c
             cbits/src/ftcolor.c
             cbits/src/ftlayer.c

  cc-options: -DFT2_BUILD_LIBRARY

  if flag(stdcall)    
    cpp-options:      -DCALLCV=stdcall    
  elif flag(ccall)    
    cpp-options:      -DCALLCV=ccall    
  else    
    cpp-options:      -DCALLCV=capi    
    
  default-language:   Haskell98

flag ccall
  description: Use the ccall call convention.
  default: False

flag stdcall
  description: Use the stdcall call convention (takes precedence over the ccall flag).
  default: False

Flag examples
  Description: Whether the example program should be built
  Default: False

Executable freetype-example
  Main-is:       Main.hs
  hs-source-dirs: app/example
  Build-depends: base >= 4.10 && < 5
               , freetype2
  ghc-options: -Wall -Wno-name-shadowing

  if flag(examples)
    Buildable: True
  else
    Buildable: False

  default-language:   Haskell98

source-repository head
  type: git
  location: git://github.com/dagit/freetype2.git
